# store

./: .flake8  .gitignore  .sqlfluff  README.md  conftest.py  entrypoint.sh  mypy.ini  pyproject.toml
common/: __init__.py  readme.md
common/auth/: __init__.py  auth_constants.py  auth_errors.py  user.py  utils.py
common/auth/tests/: __init__.py  conftest.py
common/base_workers/: __init__.py  base_worker.py  decorators.py  metrics.py  types.py  workers_health.py
common/constance/: __init__.py  client.py  dependencies.py  lifetime.py
common/constance/tests/: __init__.py  conftest.py
common/db/: __init__.py  base_queries.py  exceptions.py  readme.md  retry.py  utils.py
common/elastic/: __init__.py  client.py  dependencies.py  lifetime.py
common/elastic/tests/: conftest.py
common/errors/: __init__.py  error_responses.py  exceptions.py  schema.py
common/fastapi/: __init__.py  middlewares.py  paginator.py
common/http_client/: __init__.py  base_http_client.py  dependencies.py
common/locale/: __init__.py  localization.py
common/logging/: log_models.py  logging.py
common/opentelemetry/: __init__.py  lifetime.py  patch_aio_pika.py
common/rabbitmq/: README.md  __init__.py  connection.py  consumer.py  dependencies.py  lifetime.py  producer.py  queues.py  vector_producer.py
common/rabbitmq/tests/: __init__.py  conftest.py
common/redis/: __init__.py
common/sentry/: __init__.py  sentry.py
common/service_db/: __init__.py  base_service_db_queries.py  dependencies.py  lifetime.py  migrator.py  service_db_health.py
common/service_db/tests/: __init__.py  conftest.py
common/service_redis/: __init__.py  client.py  dependencies.py  lifetime.py
common/service_redis/tests/: __init__.py  conftest.py
common/sqlalchemy/: README.md  __init__.py  base_sqlalchemy_query.py  dependencies.py  lifetime.py  sqlalchemy_db_health.py
common/sqlalchemy/tests/: __init__.py
common/taskiq/: __init__.py  broker.py  decorators.py  lifetime.py
common/tests/: __init__.py
common/token_cache/: __init__.py  dependencies.py  lifetime.py  token_cache.py
common/token_cache/tests/: __init__.py  conftest.py
common/utils/: __init__.py  dates.py  paths.py  translations.py  urls.py
configuration/: clients.py  constants.py  settings.py  types.py
configuration/app_settings/: __init__.py  auth_settings.py  constants_settings.py  elasticsearch_settings.py  locale_settings.py  logging_settings.py  rabbitmq_settings.py  sentry_settings.py  service_db_settings.py  service_redis_settings.py  sqlalchemy_db_settings.py  taskiq_settings.py  telemetry_settings.py  token_cache_settings.py  web_settings.py
deploy/: Dockerfile  __init__.py  docker-compose.otlp.yml  docker-compose.yml
locale/en/LC_MESSAGES/: base.po
store/: __init__.py  metrics.py
store/db/: __init__.py
store/db/service_db/migrations/: 20230929234524_migrations.py  20250828204455_init_tables.py  __init__.py
store/db/service_db/queries/: __init__.py  add_item_to_order.py
store/db/service_db/service_db/: __init__.py
store/db/service_db/sql/: add_item_to_order.sql  clear_testdb.sql  (+2 more)
store/services/: __init__.py
store/tests/: conftest.py
store/tests/test_web/: __init__.py
store/utils/: __init__.py  https_formatter.py  responses.py
store/web/: application.py  error_responses.py  errors.py  exception_handlers.py  exceptions.py  lifetime.py  main.py  web_settings.py
store/web/api/: router.py
(+18 files in other folders)
